myapp/node-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels:
       app:  myapp
spec:
  containers:
    - name: con1
      image: nginx:latest
      ports:
        - containerPort: 80
  nodeName: worker02
