myapp/liveness-probe-http.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-liv-http
  labels:
    app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 5    
---
apiVersion: v1
kind: Service
metadata:
  name : live-svc
spec:
  selector:
    app: myapp
  ports:
  - port: 80
