myapp/readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod-readiness-exec
  labels:
    app: myapp
spec:
   containers:
   - name: con1
     image: nginx:latest
     ports:
     - containerPort: 80
     readinessProbe:
       exec:
         command: 
         - cat
         - /usr/share/nginx/html/index.html
       initialDelaySeconds: 10
       periodSeconds: 5    
---
apiVersion: v1
kind: Service
metadata:
  name : readiness-exec-svc
spec:
  selector:
    app: myapp
  ports:
  - port: 80
